welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value int
  int max;
  ^max1020:5: error: missing arguments for method max in object Math;
follow this method with `_' if you want to treat it as a partially applied function
  return Math.max
              ^